--- a/ClientsDbExplorer/ClientsDbExplorer.csproj
+++ b/ClientsDbExplorer/ClientsDbExplorer.csproj
@@ -115,7 +115,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Db.cs" />
     <Compile Include="Helpers\Declination.cs" />
     <Compile Include="MainView.cs">
       <SubType>Form</SubType>
@@ -129,7 +128,6 @@
     <Compile Include="AddEditClientView.Designer.cs">
       <DependentUpon>AddEditClientView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\IDb.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -165,6 +163,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
