--- a/ClientsDbExplorer/packages.config
+++ b/ClientsDbExplorer/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DynamicData" version="6.6.1.2507" targetFramework="net472" />
+  <package id="Fody" version="3.2.17" targetFramework="net472" developmentDependency="true" />
   <package id="NLog" version="4.5.11" targetFramework="net472" />
   <package id="ReactiveUI" version="9.1.4" targetFramework="net472" />
   <package id="ReactiveUI.Events.Winforms" version="9.1.4" targetFramework="net47" />
+  <package id="ReactiveUI.Fody" version="9.1.4" targetFramework="net472" />
   <package id="ReactiveUI.WinForms" version="9.1.4" targetFramework="net472" />
   <package id="Splat" version="5.0.2" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
